--- a/proto4.tex
+++ b/proto4.tex
@@ -26,13 +26,20 @@ A common question amongst people learning Haskell is whether I/O is pure or not.
 programming language, but I/O looks like it's inherently impure - for example, the function getLine, which gets a line from stdin, returns 
 a different result depending on what the user types:
 
+
+
+\begin{code-list}[H]
+\begin{singlespace}
 \begin{minted}[linenos]{haskell}
 Prelude> x <- getLine
 Hello
 Prelude> x
 "Hello"
 \end{minted}
-
+\end{singlespace}
+\caption{}
+\label{}
+\end{code-list}
 How can this possibly be pure?
 
 In this post I want to explain exactly why I/O in Haskell is pure. I'll do it by building up data structures that represent blocks of code. 
@@ -89,6 +96,9 @@ the screen:
 %\mint{haskell}|echo = get $\backslash$ seqio $\backslash$ put|
 
 or even more complicated actions:
+
+\begin{code-list}[H]
+\begin{singlespace}
 \begin{minted}[linenos]{haskell}
 hello = put "What is your name?"      `seqio` \_    ->
         get                           `seqio` \name ->
@@ -97,6 +107,12 @@ hello = put "What is your name?"      `seqio` \_    ->
         put ("Hello " ++ name ++ "!") `seqio` \_    ->
         put ("You are " ++ age ++ " years old")
 \end{minted}
+\end{singlespace}
+\caption{}
+\label{}
+\end{code-list}
+
+
 Although this looks like imperative code (admittedly with pretty unpleasant syntax), it's really a value of type \haskellConstruct{IOAction} \Verb!()!. In \progLang{Haskell},\endnote{%
   Use \macroName{progLang}!
 }
@@ -110,6 +126,8 @@ In the gist\endnote{%
  I've defined a function to convert an \haskellConstruct{IOAction} to a \haskellConstruct{String}, which allows them to be printed, so you can load the file into \haskellConstruct{GHCi} 
 and verify that \haskellConstruct{hello} is in fact just data:
 
+\begin{code-list}[H]
+\begin{singlespace}
 \begin{minted}[linenos]{haskell}
 *Main> print hello
 Put "What is your name?" (
@@ -126,13 +144,30 @@ Put "What is your name?" (
   )
 )
 \end{minted}
-It will surprise no one to learn that \haskellConstruct{IOAction} is a monad. In fact we've already defined the necessary bind operation in \haskellConstruct{seqio}, so getting 
+\end{singlespace}
+\caption{}
+\label{}
+\end{code-list}
+
+
+It will surprise no one to learn that \haskellConstruct{IOAction} is a monad. In fact we've already defined the necessary bind operation in \
+haskellConstruct{seqio}, so getting 
 the \haskellConstruct{Monad} instance is trivial:
+
+\begin{code-list}[H]
+\begin{singlespace}
 \begin{minted}[linenos]{haskell}
 instance Monad IOAction where
     return = Return
     (>>=)  = seqio
 \end{minted}
+
+\end{singlespace}
+\caption{}
+\label{}
+\end{code-list}
+
+
 
 The main benefit of doing this is that we can now sequence actions using \progLang{Haskell}'s\endnote{%
   Use \macroName{progLang}!
@@ -140,6 +175,9 @@ The main benefit of doing this is that we can now sequence actions using \progLa
 \haskellConstruct{do} notation, which desugars into calls to \Verb!(>>=)!, and 
 hence to \haskellConstruct{seqio}. Our earlier \haskellConstruct{hello} example can now be written as:
 \par
+
+\begin{code-list}[H]
+\begin{singlespace}
 \begin{minted}[linenos]{haskell}
 hello2 = do put "What is your name?"
             name <- get
@@ -148,6 +186,12 @@ hello2 = do put "What is your name?"
             put ("Hello, " ++ name ++ "!")
             put ("You are " ++ age ++ " years old!")
 \end{minted}
+\end{singlespace}
+\caption{}
+\label{}
+\end{code-list}
+
+
 Remember though, that this is still just defining a value of type 
 \haskellConstruct{IOAction} \Verb!()! ---\endnote{%
   You want an em-dash, not a hyphen here.
@@ -157,17 +201,29 @@ no code is executed, and no effects occur! So far, this post is 100 \% pure.
 
 To see the effects, we need to define a function that takes an \haskellConstruct{IOAction} \haskellConstruct{a} and converts it into a value of type \haskellConstruct{IO} \haskellConstruct{a}, which can then be executed by the interpreter or the runtime system. It's easy to write such a function just by turning it into the approprate calls to \haskellConstruct{putStrLn} and \haskellConstruct{getLine}.
 
+
+\begin{code-list}[H]
+\begin{singlespace}
 \begin{minted}[linenos]{haskell}
 run :: IOAction a -> IO a
 run (Return a) = return a
 run (Put s io) = putStrLn s >> run io
 run (Get g)    = getLine >>= \s -> run (g s)
 \end{minted}
+\end{singlespace}
+\caption{}
+\label{}
+\end{code-list}
+
+
 
 You can now load up \haskellConstruct{GHCi} and apply run to any action --
 a value of type \haskellConstruct{IO} \haskellConstruct{a} will be returned, and then immediately executed by the 
 interpreter:
 
+
+\begin{code-list}[H]
+\begin{singlespace}
 \begin{minted}[linenos]{haskell}
 *Main> run hello
 What is your name?
@@ -176,8 +232,16 @@ What is your age?
 29
 Hello Chris!
 You are 29 years old
-
 \end{minted}
+\end{singlespace}
+\caption{}
+\label{}
+\end{code-list}
+
+
+
+
+
 Is there any practical use to this?
 
 Yes ---\endnote{%
@@ -195,15 +259,30 @@ In effect we have a
 If a user of your program or library supplies a value of type \haskellConstruct{IOAction} \haskellConstruct{a}, you know that you are free to convert it to an \haskellConstruct{IO} \haskellConstruct{a} using run and execute it, 
 and it will never do anything except reading from \haskellConstruct{stdin} and writing to \haskellConstruct{stdout} (not that those things aren't potentially dangerous in themselves, but\dots)
 
+\begin{code-list}[H]
 
 \begin{singlespace}
   \inputminted[linenos]{haskell}{haskell-proto4-purvey-wincer.hs}
 \end{singlespace}
 
+\caption{}
+\label{}
+\end{code-list}
+
+
+
 \section{Appraoch 1}
+
+\begin{code-list}[H]
+
 \begin{singlespace}
   \inputminted[linenos]{haskell}{haskell-proto4-myrtle-uppers.hs}
 \end{singlespace}
+
+\caption{}
+\label{}
+\end{code-list}
+
 
 \section{Approach 2}
 
@@ -215,9 +294,15 @@ The interpreted program is still pure since the IO actions have not been execute
 if the running is done inside a monad then the IO still is pure.
 
 
+\begin{code-list}[H]
 \begin{singlespace}
+
   \inputminted[linenos]{haskell}{haskell-proto4-platen-winkel.hs}
 \end{singlespace}
+\caption{}
+\label{}
+\end{code-list}
+
 
 
 \section{Chapter recapitulation}
