added IO sketch in proto4.tex.

--- a/proto4.tex
+++ b/proto4.tex
@@ -304,6 +304,16 @@ if the running is done inside a monad then the IO still is pure.
 \end{code-list}
 
 
+\section{IOSketch}
+
+\begin{code-list}[H]
+\begin{singlespace}
+\inputminted[linenos]{haskell}{IOSketch.hs}
+\end{singlespace}
+\caption{}
+\label{}
+\end{code-list}
+
 
 \section{Chapter recapitulation}
 
