added about this chapter to proto4.tex.

--- a/proto4.tex
+++ b/proto4.tex
@@ -10,13 +10,8 @@
 
 
 \section{About this chapter}
-
-\noindent\rule{\textwidth}{0.5pt}
-%-----------------------------------------------------------------------------
-
-Our aim to embedd IO into the DSL
-
-So something like a ``data'' declaration for IO operations
+The aim of this prototype is to embed \languageConstruct{IO} operations within the definition on an eDSL so as to allow the chaining and control 
+of operations of the language irrespective of them pure or impure.
 
 \section{Current work}
 
