Added, removed, polished content for part of section 13.2 in proto4.tex.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1542,6 +1542,13 @@ month = {},
 year = {},
 url = {http://www.swi-prolog.org/pldoc/man?predicate=assertz/1}
 }
+@misc{website:haskellorg,
+title = {Haskell website},
+author = {Haskell},
+month = {January},
+year = {2015},
+url = {https://www.haskell.org/}
+}
 @comment{website:,
 title = ,
 author = ,
