--- a/thesis-solanki.tex
+++ b/thesis-solanki.tex
@@ -83,6 +83,7 @@
 \newcommand{\macroArg}[1]{\texttt{\char`\{#1\char`\}}}
 \newcommand{\prologConstruct}[1]{\textcolor{brown}{\texttt{#1}}}
 \newcommand{\haskellConstruct}[1]{\textcolor{magenta}{\texttt{#1}}}
+\newcommand{\haskellVar}[1]{\haskellConstruct{\textit{#1}}}
 \newcommand{\languageConstruct}[1]{\textcolor{orange}{\texttt{#1}}}
 \newcounter{butCounter}
 \newcommand\butbut{\addtocounter{butCounter}{1}\edef\next{%
