fix to fix.  recombine.

--- a/proto1.tex
+++ b/proto1.tex
@@ -319,7 +319,7 @@ One result of coding as in Listing~\ref{tab:non-recurse} rather than as in Listi
 \haskellConstruct{FlatTerm} is separate from \yyy{its type}{the type of its subterms}\endnote{%
   ``\textit{its type is \haskellConstruct{a}}'' seems wrong.
   The type \haskellConstruct{a} seems associated with terms.
-  The type \haskellConstruct{FlatTerm} has kind \Verb!* -> *!\,.
+  The type \haskellConstruct{FlatTerm} has kind \texttt{* -> *}\,.
   \par
   Is my correction ok?
 }
