Fixed the long line for title at 10.6 .

--- a/proto1.tex
+++ b/proto1.tex
@@ -493,9 +493,7 @@ Figure~\ref{fig:automatic-extension}.
 \end{figure}
 
 
-\section{Making the language compatible with \protect\codeLibrary{unification-fd}}\label{sec:making-lang-comp}
-
-\david{Check the Section~\ref{sec:making-lang-comp} title change above.}
+\section[Making the language compatible with \protect\codeLibrary{unification-fd}]{Making the language compatible with \newline\codeLibrary{unification-fd}}\label{sec:making-lang-comp}
 
 Our language is now opened up and ready for expansion, but it still needs to conform to the requirements of the
 \codeLibrary{unifiication-fd} library (\cite{unification-fd-lib}) for the unification algorithm to work.
