Changed the Functor Hierarchy diagram.

--- a/proto1.tex
+++ b/proto1.tex
@@ -528,8 +528,8 @@ Figure~\ref{fig:Functor Hierarchy} shows the relation between the different clas
 
 \begin{figure}[th]
 \centering
-\includegraphics[scale = 0.7]{FunctorHierarchy.png}
-\caption{Functor Hierarchy \cite{website:foldablenadtraversable}}
+\includegraphics[scale = 0.7]{FunctorHierarchy.pdf}
+\caption{Functor Hierarchy (simplified from \cite{website:foldablenadtraversable})}
 \label{fig:Functor Hierarchy}
 \end{figure}
 
